# japanese-compound-verbs

./: README.md  pyproject.toml
.github/workflows/: release.yaml  release_tag.yml
data/: deck.csv
japanese_compound_verbs/: main.py
japanese_compound_verbs/datatypes/: __init__.py  data_record.py
japanese_compound_verbs/notetypes/: __init__.py
japanese_compound_verbs/notetypes/japanese_compound_verb/: definition.py  utils.py
japanese_compound_verbs/notetypes/japanese_compound_verb/cards/: __init__.py  japanese_to_english.py
